--- a/todolists/app/views/layouts/application.html.erb
+++ b/todolists/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
 
 <%= yield %>
-
+<% if logged_in? %>
+	<div style='float: right;'>
+		Logged in as <%= current_user.username %> | <%=link_to "Logout", logout_path, method: :delete %>
+	</div>
+<% end %>
 </body>
 </html>
